--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Node + PlantUML Starter Template",
   "license": "MIT",
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "eslint:check": "npx eslint .",
     "eslint:fix": "npx eslint --fix .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +21,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "express": "^4.18.2",
