--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "connect-livereload": "^0.6.1",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
     "mongoose": "^8.0.3",
+    "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   }
