Provide Jest automation and linewise statistical analysis of test setup

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dev": "nodemon ./bin/www",
     "eslint:check": "npx eslint .",
     "eslint:fix": "npx eslint --fix .",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
