--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint:fix": "npx eslint --fix .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:wc": "jest --watch --coverage"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
