--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,4 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-
-# Dependency directories
-node_modules/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
-
 # local mongo image
 data
-
-# testing analytics
-coverage
+# local node modules
+node_modules
