--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:lts-alpine3.18
+FROM node:alpine
 
 WORKDIR /app
 
@@ -6,10 +6,10 @@ ADD package.json package-lock.json ./
 
 RUN npm install
 
-ADD .eslintrc.cjs ./app/eslintrc.cjs
-ADD .prettierrc.json ./app/prettierrc.json
-ADD index.html ./app/index.html
-ADD vite.config.js ./app/vite.config.js
-ADD vitest.config.js ./app/vitest.config.js
+ADD .eslintrc.cjs /app/eslintrc.cjs
+ADD .prettierrc.json /app/prettierrc.json
+ADD index.html /app/index.html
+ADD vite.config.js /app/vite.config.js
+ADD vitest.config.js /app/vitest.config.js
 
 CMD [ "npm", "run", "dev" ]
