--- a/backend/package.json
+++ b/backend/package.json
@@ -37,5 +37,10 @@
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
+  },
+  "jest": {
+    "setupFiles": [
+      "dotenv/config"
+    ]
   }
 }
