--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "axios": "^1.6.2",
     "connect-livereload": "^0.6.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
