Fix typo for test automation with GitHub

--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -1,8 +1,8 @@
 name: Backend Tests
 on:
-  pull_requests:
-  paths:
-    - 'backend/**'
+  pull_request:
+    paths:
+      - 'backend/**'
 
 jobs:
   test:
