--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
     "mongoose": "^8.0.3",
     "mongoose-autopopulate": "^1.1.0",
