--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "connect-livereload": "^0.6.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
