--- a/backend/package.json
+++ b/backend/package.json
@@ -36,9 +36,11 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
-    "mongoose": "^8.0.3",
+    "mongoose": "^8.1.0",
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
+    "passport": "^0.7.0",
+    "passport-local-mongoose": "^8.0.0",
     "pug": "^3.0.2"
   },
   "jest": {
