Test external api integration with OpenAI

--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^8.1.0",
     "mongoose-autopopulate": "^1.1.0",
     "morgan": "^1.10.0",
+    "openai": "^4.24.7",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
     "pug": "^3.0.2"
