--- a/backend/package.json
+++ b/backend/package.json
@@ -42,7 +42,8 @@
     "openai": "^4.24.7",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "socket.io": "^4.7.4"
   },
   "jest": {
     "setupFiles": [
