--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,11 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5173:5173
+    env_file:
+      - ./frontend/.env
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
-
   mongodb:
     image: mongo
     ports:
